--- a/adopt-me/package.json
+++ b/adopt-me/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "format": "prettier --write 'src/**/*.{js,jsx}'",
-    "lint":"eslint 'src/**/*.{js,jsx}' --quiet", 
+    "lint": "eslint 'src/**/*.{js,jsx}' --quiet",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +17,12 @@
   "devDependencies": {
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^2.8.8"
+    "prettier": "^2.8.8",
+    "vite": "^5.1.3"
+  },
+  "dependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
